--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+}
+body
+{
+  font-family: 'Dancing Script', cursive;
+  /*background-image: url("images/sky.jpg");*/
+  /*background-attachment: fixed;*/
+  color: #72210d;
+
+  min-height: 450px;
+  height: 100vh;
+  margin: 0;
+  /*background: radial-gradient(circle, #0077ea, #1f4f96, #1b2949, #000);*/
+  /*background: radial-gradient(circle, #5aa5ff, #4d78c4, #3c4e7a, #1a1a2e);*/
+  /*background: radial-gradient(circle, #78b8ff, #6a8fd1, #56639a, #303a5a);*/
+
+  /*background: radial-gradient(circle, #90c7ff, #7ba1db, #6672aa, #3e4869);*/
+  /*background: radial-gradient(circle, #a3d5ff, #8fb6e2, #7a8cb3, #515d7b);*/
+  background: radial-gradient(circle, #85c1ff, #7495c9, #5d6f99, #3b4663);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main_page{
   display: flex;
+  height: 100vh;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+header
+{
+  background-color: rgba(229, 180, 180, 0.6);
+  border-radius: 20px 20px 0 0;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+header h1{
+  text-align: center;
+  font-size: 2em;
+  padding: 0.1em 0;
+}
+.main_picture{
+  background-image: url("images/mainMe.png");
+  background-size: cover;
+  /*flex: 1;*/
+}
+.round{
+  background-color: #dc9494;
+  border-radius: 15px;
+  width: clamp(200px, 22%, 400px);
+  margin: 10px;
+  height:200px;
+  /*border: 2px solid black;*/
+  /*border-radius: 5px;*/
+  /*background-color: rgba(204, 3 , 35 ,  0.5);*/
+  box-shadow:rgba(60, 69, 67, 0.6) 5px 5px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+nav  ul{
+  position: fixed;
+  top: 25px;
+}
+
+nav ul li, footer .button{
+  display: inline;
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: rgba(204, 3 , 35 ,  0.5);
+  /*cursor: url("./images/cursor.png"), auto;*/
+  padding: 5px;
+  box-shadow: rgba(60, 69, 67, 0.6) 5px 5px;
+}
+
+footer{
+  clear: both;
+  background-color:  rgba(229, 180, 180, 0.6);
+  border-radius: 0 0 20px 20px;
+  height: 3em;
+}
+
+footer .button{
+  display: inline-block;
+}
+/*buttom Send me email*/
+.email{
+  color: black;
+  font-variant: small-caps;
+}
+
+/*-----------------------------------------------*/
+@media (max-width: 450px) {
+  .main_container{
+    /*display: flex;*/
+    flex-direction: column;
+    justify-content: space-around;
   }
-  to {
-    transform: rotate(360deg);
+
+  .round{
+    margin: 10px;
+    /*padding: 10px;*/
+    height:150px;
+    width: 250px;
   }
 }
+
+
+
+
